-added admincontroller -created user management in navbar -created templates for listing users and showing user form -updated UserService interface to use UUID for user identification instead of int